Fixes CSS issues on small viewports

--- a/app/static/css/portfolio.css
+++ b/app/static/css/portfolio.css
@@ -4,6 +4,10 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+body.active {
+    overflow: hidden;
+}
+
 p {
     font-family: 'Poppins', sans-serif;
     font-size: 1.1em;
@@ -49,7 +53,7 @@ a:focus {
     position: fixed;
     top: 0;
     left: -250px;
-    height: 100vh;
+    height: 100%;
     z-index: 999;
     background: #3500d3;
     color: white;
@@ -86,7 +90,7 @@ a:focus {
     display: none;
     position: fixed;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     background: rgba(0, 0, 0, 0.7);
     z-index: 998;
     opacity: 0;
@@ -95,6 +99,7 @@ a:focus {
 .overlay.active {
     display: block;
     opacity: 1;
+    overflow: hidden;
 }
 
 #sidebar .sidebar-header {
